json2dcp.ipynb: break after finding IOB PAD cell

--- a/json2dcp.ipynb
+++ b/json2dcp.ipynb
@@ -242,10 +242,12 @@
     "            for pad_user in nc.ports[\"OUT\"].net.users:\n",
     "                if pad_user.cell.type == \"PAD\":\n",
     "                    pad_nc = pad_user.cell\n",
+    "                    break\n",
     "        elif \"INBUF\" in nc.type:\n",
     "            for pad_driver in nc.ports[\"PAD\"].net.drivers:\n",
     "                if pad_driver.cell.type == \"PAD\":\n",
     "                    pad_nc = pad_driver.cell\n",
+    "                    break\n",
     "        else:\n",
     "            print(f\"Unhandled IOB cell: {nc.type}\")\n",
     "            continue\n",
