[TEST] json2dcp.ipynb: Add experimental inter-site/tile routing support
TODO: Figure out why some nets do not get routed.

--- a/json2dcp.ipynb
+++ b/json2dcp.ipynb
@@ -97,7 +97,9 @@
     "from nextpnr import NextpnrDesign, NextpnrCell, NextpnrCellPort, NextpnrNet, PortDirection\n",
     "import rapidwright\n",
     "from com.xilinx.rapidwright.design import Cell, Design, Net, NetType, PinType, SitePinInst, Unisim\n",
+    "from com.xilinx.rapidwright.device import Node, PIP, Wire\n",
     "from com.xilinx.rapidwright.edif import EDIFDirection, EDIFHierNet, EDIFNet, EDIFPortInst, EDIFTools\n",
+    "from com.xilinx.rapidwright.router import RouteNode\n",
     "\n",
     "from java.nio.file import Paths\n",
     "from com.xilinx.rapidwright.debug import DotEdifDumper"
@@ -368,6 +370,8 @@
     "                        nn.rwNet.createPin(site_pin_name, si)\n",
     "\n",
     "# process net routing\n",
+    "# TODO: find better way of finding PIP between nodes (maybe try PIP.getArbitraryPIP(Node start, Node end))\n",
+    "# TODO: refactor\n",
     "for nn in ndes.nets.values():\n",
     "    routing = nn.attrs[\"ROUTING\"].split(\";\")\n",
     "    print(f\"Handling routing for {nn.name}\")\n",
@@ -412,40 +416,93 @@
     "            assert si is not None,f\"\\t\\tSiteInst {src_site_name} does not exist\"\n",
     "            si.routeIntraSiteNet(nn.rwNet, si.getBELPin(src_site_pin_name, src_site_pin_name), si.getBELPin(dst_bel_name, dst_bel_pin_name))\n",
     "        elif is_site_pin_pip(dst_wire):\n",
-    "            #print(\"\\t\\tTODO: tile->site routing\")\n",
+    "            # print(f\"\\tSRC: {src_wire} -> DST: {dst_wire}\")\n",
+    "            print(\"\\t\\ttile->site routing\")\n",
     "            # SRC: <TILE>_<TILE_COORD>/<TILE_WIRE>\n",
     "            src_tile_name,src_wire_name = parse_tile_pip(src_wire)\n",
     "            # DST: SITEWIRE/<SITE>_<SITE_COORD>/<SITE_PIN>\n",
     "            dst_site_name,dst_site_pin_name = parse_site_pin_pip(dst_wire)\n",
-    "            src_tile = des.getDevice().getTile(src_tile_name)\n",
     "            dst_si = des.getSiteInstFromSiteName(dst_site_name)\n",
-    "            if dst_si is None:\n",
-    "                dst_si = des.createSiteInst(des.getDevice().getSite(dst_site_name))\n",
-    "            dst_tile = des.getSiteInstFromSiteName(dst_site_name).getTile()\n",
-    "            #print(f\"\\t\\tSRC Tile: {src_tile}, DST Tile: {dst_tile}\")\n",
-    "            continue\n",
+    "            assert src_si is not None\n",
+    "            dst_spi = SitePinInst(dst_site_pin_name, dst_si)\n",
+    "            dst_si.addPin(dst_spi)\n",
+    "            src_rnode = RouteNode(src_wire, des.getDevice())\n",
+    "            dst_rnode = RouteNode(dst_spi)\n",
+    "            if src_rnode == dst_rnode:\n",
+    "                continue\n",
+    "            src_node = Node.getNode(src_rnode)\n",
+    "            dst_node = Node.getNode(dst_rnode)\n",
+    "            src_tile_pip = None\n",
+    "            for pip in src_node.getAllDownhillPIPs():\n",
+    "                print(f\"\\t\\tPIP: {pip.toString()}\")\n",
+    "                if pip in dst_node.getAllUphillPIPs():\n",
+    "                    src_tile_pip = pip\n",
+    "                    break\n",
+    "            if src_tile_pip is None:\n",
+    "                print(f\"\\t\\tFailed to find PIP\")\n",
+    "                continue\n",
+    "            else:\n",
+    "                # src_tile_pip.setIsPIPFixed(True)\n",
+    "                # add PIP to net\n",
+    "                nn.rwNet.addPIP(src_tile_pip)\n",
     "        elif is_site_pin_pip(src_wire):\n",
-    "            #print(\"\\t\\tTODO: site->tile routing\")\n",
+    "            # print(f\"\\tSRC: {src_wire} -> DST: {dst_wire}\")\n",
+    "            print(\"\\t\\tsite->tile routing\")\n",
     "            # SRC: SITEWIRE/<SITE>_<SITE_COORD>/<SITE_PIN>\n",
     "            src_site_name,src_site_pin_name = parse_site_pin_pip(src_wire)\n",
     "            # DST: <TILE>_<TILE_COORD>/<TILE_WIRE>\n",
     "            dst_tile_name,dst_wire_name = parse_tile_pip(dst_wire)\n",
-    "            src_tile = des.getSiteInstFromSiteName(src_site_name).getTile()\n",
-    "            dst_tile = des.getDevice().getTile(dst_tile_name)\n",
-    "            #print(f\"\\t\\tSRC Tile: {src_tile}, DST Tile: {dst_tile}\")\n",
-    "            continue\n",
+    "            src_si = des.getSiteInstFromSiteName(src_site_name)\n",
+    "            assert src_si is not None\n",
+    "            src_spi = SitePinInst(src_site_pin_name, src_si)\n",
+    "            src_si.addPin(src_spi)\n",
+    "            src_rnode = RouteNode(src_spi)\n",
+    "            dst_rnode = RouteNode(dst_wire, des.getDevice())\n",
+    "            if src_rnode == dst_rnode:\n",
+    "                continue\n",
+    "            src_node = Node.getNode(src_rnode)\n",
+    "            dst_node = Node.getNode(dst_rnode)\n",
+    "            src_tile_pip = None\n",
+    "            for pip in src_node.getAllDownhillPIPs():\n",
+    "                print(f\"\\t\\tPIP: {pip.toString()}\")\n",
+    "                if pip in dst_node.getAllUphillPIPs():\n",
+    "                    src_tile_pip = pip\n",
+    "                    break\n",
+    "            if src_tile_pip is None:\n",
+    "                print(f\"\\t\\tFailed to find PIP\")\n",
+    "                continue\n",
+    "            else:\n",
+    "                # src_tile_pip.setIsPIPFixed(True)\n",
+    "                # add PIP to net\n",
+    "                nn.rwNet.addPIP(src_tile_pip)\n",
     "        else:\n",
-    "            print(\"\\t\\tTODO: tile->tile routing\")\n",
+    "            # print(f\"\\tSRC: {src_wire} -> DST: {dst_wire}\")\n",
+    "            print(\"\\t\\ttile->tile routing\")\n",
     "            # SRC: <TILE>_<TILE_COORD>/<TILE_WIRE>\n",
     "            src_tile_name,src_wire_name = parse_tile_pip(src_wire)\n",
     "            # DST: <TILE>_<TILE_COORD>/<TILE_WIRE>\n",
     "            dst_tile_name,dst_wire_name = parse_tile_pip(dst_wire)\n",
+    "            if src_tile_name.startswith(\"NULL\"):\n",
+    "                continue\n",
     "            src_tile = des.getDevice().getTile(src_tile_name)\n",
     "            dst_tile = des.getDevice().getTile(dst_tile_name)\n",
-    "            src_wire_idx = src_tile.getWireIndex(src_wire_name)\n",
-    "            dst_wire_idx = dst_tile.getWireIndex(dst_wire_name)\n",
-    "            print(f\"\\t\\tSRC Tile: {src_tile}, DST Tile: {dst_tile}\")\n",
-    "            print(f\"\\t\\tSRC Wire: {src_wire_idx}, DST Wire: {dst_wire_idx}\")"
+    "            src_rnode = RouteNode(src_wire, des.getDevice())\n",
+    "            dst_rnode = RouteNode(dst_wire, des.getDevice())\n",
+    "            src_node = Node.getNode(src_rnode)\n",
+    "            dst_node = Node.getNode(dst_rnode)\n",
+    "            # find PIP common to both nodes\n",
+    "            src_tile_pip = None\n",
+    "            for pip in src_node.getAllDownhillPIPs():\n",
+    "                if pip in dst_node.getAllUphillPIPs():\n",
+    "                    src_tile_pip = pip\n",
+    "                    break\n",
+    "            if src_tile_pip is None:\n",
+    "                print(f\"\\t\\tFailed to find PIP\")\n",
+    "                continue\n",
+    "            else:\n",
+    "                # src_tile_pip.setIsPIPFixed(True)\n",
+    "                # add PIP to net\n",
+    "                nn.rwNet.addPIP(src_tile_pip)"
    ]
   },
   {
