json2dcp.ipynb: update tasks

--- a/json2dcp.ipynb
+++ b/json2dcp.ipynb
@@ -62,19 +62,21 @@
     "    - [x] Create and connect each NextpnrNet\n",
     "        - [x] create and add net to design\n",
     "        - [x] connect net to driver and user cells\n",
-    "    - [ ] Process each NextpnrNet PIP routing\n",
+    "    - [x] Process each NextpnrNet PIP routing\n",
     "        - [x] intra-site routing\n",
     "            - use SiteInst.routeIntraSiteNet(...) to assign a net to a site wire and route it\n",
     "            - use site pin name for bel name and bel pin name to create its associated BELPin\n",
     "            - [x] case 1: site pin to bel pin routing\n",
     "            - [x] case 2: bel pin to bel pin routing\n",
     "            - [x] case 3: bel pin to site pin routing\n",
-    "        - [ ] inter-site routing\n",
-    "            - [ ] research how to manually route PIPs/nodes\n",
-    "                - something to do with PIP/RouteNode/Wire objects?\n",
-    "            - [ ] case 1: tile to site (pin) routing\n",
-    "            - [ ] case 2: site (pin) to tile routing\n",
-    "            - [ ] case 3: tile to tile routing\n",
+    "        - [x] inter-site routing\n",
+    "            - [x] research how to manually route PIPs/nodes\n",
+    "                - find PIP between source and sink tile pins/wires, then add it to associated net\n",
+    "            - [x] case 1: tile to site (pin) routing\n",
+    "            - [x] case 2: site (pin) to tile routing\n",
+    "            - [x] case 3: tile to tile routing\n",
+    "        - [ ] refactor intra-site routing\n",
+    "        - [ ] refactor inter-site routing\n",
     "    - [ ] Fix whatever else is missing/broken\n",
     "    - [x] write design checkpoint\n",
     "- [ ] Compare NextpnrDesign and RapidWright Design netlist\n",
