json2dcp.ipynb: fix assert typo

--- a/json2dcp.ipynb
+++ b/json2dcp.ipynb
@@ -425,7 +425,7 @@
     "            # DST: SITEWIRE/<SITE>_<SITE_COORD>/<SITE_PIN>\n",
     "            dst_site_name,dst_site_pin_name = parse_site_pin_pip(dst_wire)\n",
     "            dst_si = des.getSiteInstFromSiteName(dst_site_name)\n",
-    "            assert src_si is not None\n",
+    "            assert dst_si is not None\n",
     "            dst_spi = SitePinInst(dst_site_pin_name, dst_si)\n",
     "            dst_si.addPin(dst_spi)\n",
     "            src_rnode = RouteNode(src_wire, des.getDevice())\n",
