json2dcp.ipynb: rename ROUTING string checkers and parsers

--- a/json2dcp.ipynb
+++ b/json2dcp.ipynb
@@ -181,19 +181,19 @@
     "        hex_val = \"0\" + hex_val\n",
     "    return f\"{num_bits}'h{hex_val}\"\n",
     "\n",
-    "# A site BEL PIP has the following format:\n",
+    "# A site BEL pin has the following format:\n",
     "# SITEWIRE/<SITE>_<SITE_COORD>/<BEL>_<PIN>\n",
-    "def is_site_bel_pip(s:str):\n",
+    "def is_site_bel_pin(s:str):\n",
     "    return re.match(r'^SITEWIRE/[A-Z0-9_]+_X[0-9]+Y[0-9]+/[A-Z0-9_]+_[A-Z0-9]+$', s) is not None\n",
     "\n",
-    "# A site pin PIP has the following format:\n",
+    "# A site pin has the following format:\n",
     "# SITEWIRE/<SITE>_<SITE_COORD>/<SITE_PIN>\n",
-    "def is_site_pin_pip(s:str):\n",
+    "def is_site_pin(s:str):\n",
     "    return re.match(r'^SITEWIRE/[A-Z0-9_]+_X[0-9]+Y[0-9]+/[A-Z0-9]+$', s) is not None\n",
     "\n",
     "# Format: SITEWIRE/<SITE>_<SITE_COORD>/<BEL>_<PIN> \n",
-    "def parse_site_bel_pip(s:str):\n",
-    "    assert is_site_bel_pip(s)\n",
+    "def parse_site_bel_pin(s:str):\n",
+    "    assert is_site_bel_pin(s)\n",
     "    sp = s.split(\"/\")\n",
     "    assert len(sp) == 3\n",
     "    site_name = sp[1]\n",
@@ -201,8 +201,8 @@
     "    return (site_name, bel_name, bel_pin_name)\n",
     "\n",
     "# Format: SITEWIRE/<SITE>_<SITE_COORD>/<SITE_PIN> \n",
-    "def parse_site_pin_pip(s:str):\n",
-    "    assert is_site_pin_pip(s)\n",
+    "def parse_site_pin(s:str):\n",
+    "    assert is_site_pin(s)\n",
     "    sp = s.split(\"/\")\n",
     "    assert len(sp) == 3\n",
     "    site_name = sp[1]\n",
@@ -210,10 +210,10 @@
     "    return (site_name, site_pin_name)\n",
     "\n",
     "# Format: <TILE>_<TILE_COORD>/<TILE_WIRE>\n",
-    "def parse_tile_pip(s:str):\n",
+    "def parse_tile_wire(s:str):\n",
     "    assert not s.startswith(\"SITEWIRE/\")\n",
-    "    assert not is_site_bel_pip(s)\n",
-    "    assert not is_site_pin_pip(s)\n",
+    "    assert not is_site_bel_pin(s)\n",
+    "    assert not is_site_pin(s)\n",
     "    tile_name,wire_name = s.split(\"/\")\n",
     "    return (tile_name, wire_name)"
    ]
@@ -385,45 +385,45 @@
     "        if src_wire.strip() == \"\" or dst_wire.strip() == \"\":\n",
     "            #print(\"\\t\\tskipped\")\n",
     "            continue\n",
-    "        elif is_site_bel_pip(src_wire) and is_site_bel_pip(dst_wire):\n",
+    "        elif is_site_bel_pin(src_wire) and is_site_bel_pin(dst_wire):\n",
     "            #print(\"\\t\\tintra site routing\")\n",
     "            # SRC: SITEWIRE/<SITE>_<SITE_COORD>/<BEL>_<PIN> \n",
-    "            src_site_name,src_bel_name,src_bel_pin_name = parse_site_bel_pip(src_wire)\n",
+    "            src_site_name,src_bel_name,src_bel_pin_name = parse_site_bel_pin(src_wire)\n",
     "            # DST: SITEWIRE/<SITE>_<SITE_COORD>/<BEL>_<PIN>\n",
-    "            dst_site_name,dst_bel_name,dst_bel_pin_name = parse_site_bel_pip(dst_wire)\n",
+    "            dst_site_name,dst_bel_name,dst_bel_pin_name = parse_site_bel_pin(dst_wire)\n",
     "            assert src_site_name == dst_site_name, f\"SRC site {src_site_name} != DST site {dst_site_name}\"\n",
     "            si = des.getSiteInstFromSiteName(src_site_name)\n",
     "            assert si is not None,f\"\\t\\tSiteInst {src_site_name} does not exist\"\n",
     "            si.routeIntraSiteNet(nn.rwNet, si.getBELPin(src_bel_name, src_bel_pin_name), si.getBELPin(dst_bel_name, dst_bel_pin_name))\n",
-    "        elif is_site_bel_pip(src_wire) and is_site_pin_pip(dst_wire):\n",
+    "        elif is_site_bel_pin(src_wire) and is_site_pin(dst_wire):\n",
     "            #print(\"\\t\\tintra site routing 2\")\n",
     "            # SRC: SITEWIRE/<SITE>_<SITE_COORD>/<BEL>_<PIN>\n",
-    "            src_site_name,src_bel_name,src_bel_pin_name = parse_site_bel_pip(src_wire)\n",
+    "            src_site_name,src_bel_name,src_bel_pin_name = parse_site_bel_pin(src_wire)\n",
     "            # DST: SITEWIRE/<SITE>_<SITE_COORD>/<SITE_PIN>\n",
-    "            dst_site_name,dst_site_pin_name = parse_site_pin_pip(dst_wire)\n",
+    "            dst_site_name,dst_site_pin_name = parse_site_pin(dst_wire)\n",
     "            assert src_site_name == dst_site_name, f\"SRC site {src_site_name} != DST site {dst_site_name}\"\n",
     "            si = des.getSiteInstFromSiteName(src_site_name)\n",
     "            assert si is not None,f\"\\t\\tSiteInst {src_site_name} does not exist\"\n",
     "            si.routeIntraSiteNet(nn.rwNet, si.getBELPin(src_bel_name, src_bel_pin_name), si.getBELPin(dst_site_pin_name, dst_site_pin_name))\n",
-    "        elif is_site_pin_pip(src_wire) and is_site_bel_pip(dst_wire):\n",
+    "        elif is_site_pin(src_wire) and is_site_bel_pin(dst_wire):\n",
     "            #print(\"\\t\\tintra site routing 3\")\n",
     "            # SRC: SITEWIRE/<SITE>_<SITE_COORD>/<SITE_PIN>\n",
-    "            src_site_name,src_site_pin_name = parse_site_pin_pip(src_wire)\n",
+    "            src_site_name,src_site_pin_name = parse_site_pin(src_wire)\n",
     "            # DST: SITEWIRE/<SITE>_<SITE_COORD>/<BEL>_<PIN>\n",
-    "            dst_site_name,dst_bel_name,dst_bel_pin_name = parse_site_bel_pip(dst_wire)\n",
+    "            dst_site_name,dst_bel_name,dst_bel_pin_name = parse_site_bel_pin(dst_wire)\n",
     "            assert src_site_name == dst_site_name, f\"SRC site {src_site_name} != DST site {dst_site_name}\"\n",
     "            if src_site_name.startswith(\"IOB\"):\n",
     "                continue\n",
     "            si = des.getSiteInstFromSiteName(src_site_name)\n",
     "            assert si is not None,f\"\\t\\tSiteInst {src_site_name} does not exist\"\n",
     "            si.routeIntraSiteNet(nn.rwNet, si.getBELPin(src_site_pin_name, src_site_pin_name), si.getBELPin(dst_bel_name, dst_bel_pin_name))\n",
-    "        elif is_site_pin_pip(dst_wire):\n",
+    "        elif is_site_pin(dst_wire):\n",
     "            # print(f\"\\tSRC: {src_wire} -> DST: {dst_wire}\")\n",
     "            print(\"\\t\\ttile->site routing\")\n",
     "            # SRC: <TILE>_<TILE_COORD>/<TILE_WIRE>\n",
-    "            src_tile_name,src_wire_name = parse_tile_pip(src_wire)\n",
+    "            src_tile_name,src_wire_name = parse_tile_wire(src_wire)\n",
     "            # DST: SITEWIRE/<SITE>_<SITE_COORD>/<SITE_PIN>\n",
-    "            dst_site_name,dst_site_pin_name = parse_site_pin_pip(dst_wire)\n",
+    "            dst_site_name,dst_site_pin_name = parse_site_pin(dst_wire)\n",
     "            dst_si = des.getSiteInstFromSiteName(dst_site_name)\n",
     "            assert dst_si is not None\n",
     "            dst_spi = SitePinInst(dst_site_pin_name, dst_si)\n",
@@ -447,13 +447,13 @@
     "                # src_tile_pip.setIsPIPFixed(True)\n",
     "                # add PIP to net\n",
     "                nn.rwNet.addPIP(src_tile_pip)\n",
-    "        elif is_site_pin_pip(src_wire):\n",
+    "        elif is_site_pin(src_wire):\n",
     "            # print(f\"\\tSRC: {src_wire} -> DST: {dst_wire}\")\n",
     "            print(\"\\t\\tsite->tile routing\")\n",
     "            # SRC: SITEWIRE/<SITE>_<SITE_COORD>/<SITE_PIN>\n",
-    "            src_site_name,src_site_pin_name = parse_site_pin_pip(src_wire)\n",
+    "            src_site_name,src_site_pin_name = parse_site_pin(src_wire)\n",
     "            # DST: <TILE>_<TILE_COORD>/<TILE_WIRE>\n",
-    "            dst_tile_name,dst_wire_name = parse_tile_pip(dst_wire)\n",
+    "            dst_tile_name,dst_wire_name = parse_tile_wire(dst_wire)\n",
     "            src_si = des.getSiteInstFromSiteName(src_site_name)\n",
     "            assert src_si is not None\n",
     "            src_spi = SitePinInst(src_site_pin_name, src_si)\n",
@@ -481,9 +481,9 @@
     "            # print(f\"\\tSRC: {src_wire} -> DST: {dst_wire}\")\n",
     "            print(\"\\t\\ttile->tile routing\")\n",
     "            # SRC: <TILE>_<TILE_COORD>/<TILE_WIRE>\n",
-    "            src_tile_name,src_wire_name = parse_tile_pip(src_wire)\n",
+    "            src_tile_name,src_wire_name = parse_tile_wire(src_wire)\n",
     "            # DST: <TILE>_<TILE_COORD>/<TILE_WIRE>\n",
-    "            dst_tile_name,dst_wire_name = parse_tile_pip(dst_wire)\n",
+    "            dst_tile_name,dst_wire_name = parse_tile_wire(dst_wire)\n",
     "            if src_tile_name.startswith(\"NULL\"):\n",
     "                continue\n",
     "            src_tile = des.getDevice().getTile(src_tile_name)\n",
